<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        android:title="@string/action_sort">

        <menu>
            <item android:id="@+id/action_sort_by_title_asc"
                  android:title="@string/action_sort_by_title_asc" />
            <item android:id="@+id/action_sort_by_title_desc"
                  android:title="@string/action_sort_by_title_desc" />
            <item android:id="@+id/action_sort_by_date_asc"
                  android:title="@string/action_sort_by_date_asc" />
            <item android:id="@+id/action_sort_by_date_desc"
                  android:title="@string/action_sort_by_date_desc" />
        </menu>

    </item>

    <item
        android:id="@+id/actionbar_refresh"
        android:icon="@drawable/refresh"
        android:title="@string/btn_refresh"
        app:showAsAction="ifRoom|withText" />
</menu>
