<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/search_frag_right_basic_linear_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/search_ds_intro_header"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/dataset_series_search_results"
            android:textColor="#38b4ea"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/search_frag_ds_intro_title"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:textColor="#38b4ea"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/search_frag_ds_intro_layout_fields"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/search_frag_ds_intro_layout_field_titles"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/search_frag_ds_intro_search_terms_title"
                    style="@style/styleDataseriesIntroTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_term_" />

                <TextView
                    android:id="@+id/search_frag_ds_intro_collection_title"
                    style="@style/styleDataseriesIntroTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/collection_" />

                <TextView
                    android:id="@+id/search_frag_ds_intro_time_start_title"
                    style="@style/styleDataseriesIntroTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_start_" />

                <TextView
                    android:id="@+id/search_frag_ds_intro_time_end_title"
                    style="@style/styleDataseriesIntroTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_end_" />

                <TextView
                    android:id="@+id/search_frag_ds_intro_area_title"
                    style="@style/styleDataseriesIntroTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area_bounds_" />

                <TextView
                    android:id="@+id/search_frag_ds_intro_updated_title"
                    style="@style/styleDataseriesIntroTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/updated_" />

                <TextView
                    android:id="@+id/search_frag_ds_intro_total_title"
                    style="@style/styleDataseriesIntroTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_results_" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/search_frag_ds_intro_layout_field_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    style="@style/styleDataseriesIntroTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sep" />

                <TextView
                    style="@style/styleDataseriesIntroTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sep" />

                <TextView
                    style="@style/styleDataseriesIntroTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sep" />

                <TextView
                    style="@style/styleDataseriesIntroTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sep" />

                <TextView
                    style="@style/styleDataseriesIntroTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sep" />

                <TextView
                    style="@style/styleDataseriesIntroTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sep" />

                <TextView
                    style="@style/styleDataseriesIntroTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sep" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/search_frag_right_basic_layout_dt_but_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/search_frag_ds_intro_search_terms_value"
                    style="@style/styleDataseriesIntroValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/search_frag_ds_intro_collection_value"
                    style="@style/styleDataseriesIntroValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/search_frag_ds_intro_time_start_value"
                    style="@style/styleDataseriesIntroValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/search_frag_ds_intro_time_end_value"
                    style="@style/styleDataseriesIntroValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/search_frag_ds_intro_area_value"
                    style="@style/styleDataseriesIntroValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/search_frag_ds_intro_updated_value"
                    style="@style/styleDataseriesIntroValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/search_frag_ds_intro_total_value"
                    style="@style/styleDataseriesIntroValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_frag_ds_intro_layout_items_from_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center"
            android:orientation="horizontal">

            <TextView
                style="@style/styleDataseriesIntroValues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/items_from" />

            <TextView
                android:id="@+id/search_frag_ds_intro_items_from_value"
                style="@style/styleDataseriesIntroValues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/styleDataseriesIntroValues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to" />

            <TextView
                android:id="@+id/search_frag_ds_intro_items_to_value"
                style="@style/styleDataseriesIntroValues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_frag_ds_intro_layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/search_frag_ds_intro_button_first"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_first"
                android:textColor="#A9A9A9" />

            <Button
                android:id="@+id/search_frag_ds_intro_button_prev"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_prev"
                android:textColor="#A9A9A9" />

            <Button
                android:id="@+id/search_frag_ds_intro_button_reload"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reload"
                android:textColor="#A9A9A9" />

            <Button
                android:id="@+id/search_frag_ds_intro_button_next"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_"
                android:textColor="#A9A9A9" />

            <Button
                android:id="@+id/search_frag_ds_intro_button_last"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_"
                android:textColor="#A9A9A9" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_frag_ds_intro_layout_sort_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center_horizontal|center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/search_frag_ds_intro_sort_title"
                style="@style/styleDataseriesIntroTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by" />

            <Spinner
                android:id="@+id/search_frag_ds_intro_spinner_sort_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:entries="@array/sorting_modes"
                android:paddingTop="8dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>