<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_detail_fragment_scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_gray"
    android:paddingLeft="@dimen/browse_eo_padding">

    <LinearLayout
        android:id="@+id/product_frag_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_gray"
        android:orientation="vertical">

        <pl.wasat.smarthma.customviews.TextViewWithFont
            android:id="@+id/product_frag_detail_name"
            style="@style/textMainTitle"
            android:text="Lorem"
            android:textSize="@dimen/browse_eo_text_large"

            android:paddingBottom="@dimen/browse_eo_padding_medium"
            android:paddingTop="@dimen/browse_eo_padding_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            tools:context="pl.wasat.smarthma.ui.frags.common.ProductDetailsFragment" />

        <pl.wasat.smarthma.customviews.TextViewWithFont
            android:id="@+id/product_frag_detail_dates"
            style="@style/textMainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black"
            android:textSize="@dimen/browse_eo_text"
            tools:context="pl.wasat.smarthma.ui.frags.common.ProductDetailsFragment" />

        <WebView
            android:id="@+id/product_frag_detail_content"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:padding="16dp"
            android:textSize="16sp"
            tools:context="pl.wasat.smarthma.ui.frags.common.ProductDetailsFragment" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/product_frag_detail_buttons"
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_gray"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/browse_eo_padding_small">
            <Button
                android:id="@+id/product_frag_detail_button_quicklook"
                style="@style/buttonBlue"
                android:layout_width="140dp"
                android:layout_height="@dimen/button_blue_height"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_quicklook"
                android:layout_gravity="center"
                android:text="@string/quicklook" />

            <Button
                android:id="@+id/product_frag_detail_button_download"
                style="@style/buttonBlue"
                android:layout_width="140dp"
                android:layout_height="@dimen/button_blue_height"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_metadata"
                android:layout_marginLeft="@dimen/browse_eo_padding_medium"
                android:text="@string/download" />

            <Button
                android:id="@+id/product_frag_detail_button_show_meta"
                style="@style/buttonBlue"
                android:layout_width="140dp"
                android:layout_height="@dimen/button_blue_height"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_metadata"
                android:layout_marginLeft="@dimen/browse_eo_padding_medium"
                android:text="@string/show_metadata" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/browse_eo_padding_small">
            <Button
                android:id="@+id/product_frag_detail_button_show_map"
                style="@style/buttonBlue"
                android:layout_width="140dp"
                android:layout_height="@dimen/button_blue_height"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_showmap"
                android:text="@string/show_map" />

            <Button
                android:id="@+id/product_frag_detail_button_save_cloud"
                style="@style/buttonBlue"
                android:layout_width="140dp"
                android:layout_height="@dimen/button_blue_height"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_share"
                android:layout_marginLeft="@dimen/browse_eo_padding_medium"
                android:text="@string/save_to_cloud" />

            <Button
                android:id="@+id/product_frag_detail_button_share"
                style="@style/buttonBlue"
                android:layout_width="140dp"
                android:layout_height="@dimen/button_blue_height"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_share"
                android:layout_marginLeft="@dimen/browse_eo_padding_medium"
                android:text="@string/Share" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>